all product page completed

--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RedStore |Ecommerce Website Design</title>
+    <title>All Products | RedStore </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -33,43 +33,27 @@
                 <img src="images/menu.png" class="menu-icon" alt="" onclick="menuToggle() ">
 
             </div>
-            <div class="row ">
-                <div class="col-2 ">
-                    <h1>Give your workout<br> A new style!</h1>
-                    <p>Success isn't always abaout greatness.It's about consistency.Consistent hard work.Consistent hard work gains success.Greatness will come</p>
-                    <a href=" " class="btn ">Explore Now &#8594;  </a>
-                </div>
-                <div class="col-2 ">
-                    <img src="images/image1.png " alt=" ">
 
-                </div>
-
-            </div>
         </div>
 
     </div>
 
-    <!---------------- Feature Categories ----------->
-    <div class="categories ">
-        <div class="small-container ">
-            <div class="row ">
-                <div class="col-3 ">
-                    <img src="images/category-1.jpg " alt=" ">
-                </div>
-                <div class="col-3 ">
-                    <img src="images/category-2.jpg " alt=" ">
-                </div>
-                <div class="col-3 ">
-                    <img src="images/category-3.jpg " alt=" ">
-                </div>
-            </div>
 
-        </div>
-    </div>
 
     <!---------------- Feature Product ----------->
     <div class="small-container ">
-        <h2 class="title ">Featured Products</h2>
+        <div class="row row-2">
+            <h2>All Product</h2>
+            <select>
+                    <option>Default Sort</option>
+                    <option>Sort by Price</option>
+
+                    <option>Sort by Popularity</option>
+                    <option>Sort by sale</option>
+                    <option>DSort by Rating</option>
+               </select>
+
+        </div>
         <div class="row ">
 
             <div class="col-4 ">
@@ -121,7 +105,6 @@
                 <p>$.50.00</p>
             </div>
         </div>
-        <h2 class="title ">Exclusive Products</h2>
         <div class="row ">
 
             <div class="col-4 ">
@@ -224,104 +207,20 @@
                 <p>$.50.00</p>
             </div>
         </div>
-    </div>
-    <!--------- Exclusive Products ------------>
-    <div class="offer ">
-        <div class="small-container ">
-            <div class="row ">
-                <div class="col-2 ">
-                    <img src="images/exclusive.png " alt=" " class="offer-image ">
-                </div>
-                <div class="col-2 ">
-                    <p>Exclusively Availbale on Red Store</p>
-                    <h1>Smart Bnad</h1>
-                    <p></p>
-                    <small>The Mi Smart Bnad 4 features a 39.9% larger (than Mi Bnad 3)AMOLED color full-touch display with adjustable brighness,so everythingis clear as can be. </small>
-                    <a href=" " class="btn ">Buy Now &#8594;  </a>
-                </div>
-            </div>
+
+        <div class="page-btn">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+            <span>4</span>
+            <span><i class="fas fa-arrow-right"></i></span>
 
         </div>
 
-    </div>
-    <!--------- Testimonial ------------>
-    <div class="testimonial ">
-        <div class="small-container ">
-            <div class="row ">
-                <div class="col-3 ">
-                    <i class="fas fa-quote-left "></i>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eaque, voluptatum natus obcaecati tempore quas unde consequatur eveniet! Ea quia deserunt tenetur nulla qui, iusto officiis a distinctio excepturi eaque?</p>
-                    <div class="rating ">
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star-half-alt "></i>
-                    </div>
-                    <img src="images/user-1.png " alt=" ">
-                    <h3>Sean Parker</h3>
-                </div>
-                <div class="col-3 ">
-                    <i class="fas fa-quote-left "></i>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eaque, voluptatum natus obcaecati tempore quas unde consequatur eveniet! Ea quia deserunt tenetur nulla qui, iusto officiis a distinctio excepturi eaque?</p>
-                    <div class="rating ">
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star-half-alt "></i>
-                    </div>
-                    <img src="images/user-2.png " alt=" ">
-                    <h3>Mike Smith</h3>
-                </div>
-                <div class="col-3 ">
-                    <i class="fas fa-quote-left "></i>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eaque, voluptatum natus obcaecati tempore quas unde consequatur eveniet! Ea quia deserunt tenetur nulla qui, iusto officiis a distinctio excepturi eaque?</p>
-                    <div class="rating ">
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star "></i>
-                        <i class="fas fa-star-half-alt "></i>
-                    </div>
-                    <img src="images/user-1.png " alt=" ">
-                    <h3>Mabel Joe</h3>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-    <!--------- Brands ------------>
-    <div class="brands ">
-        <div class="small-container ">
-            <div class="row ">
-                <div class="col-5 ">
-                    <img src="images/logo-godrej.png " alt=" ">
-
-                </div>
-                <div class="col-5 ">
-                    <img src="images/logo-oppo.png " alt=" ">
-
-                </div>
-                <div class="col-5 ">
-                    <img src="images/logo-paypal.png " alt=" ">
-
-                </div>
-                <div class="col-5 ">
-                    <img src="images/logo-philips.png " alt=" ">
-
-                </div>
-                <div class="col-5 ">
-                    <img src="images/logo-coca-cola.png " alt=" ">
-
-                </div>
-
-            </div>
-
-        </div>
 
     </div>
+
+
     <!--------- Footer ------------>
     <div class="footer ">
         <div class="container ">
