--- a/account.html
+++ b/account.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -35,83 +34,46 @@
         </div>
 
     </div>
-    <div class="small-container cart-page">
-        <table>
-            <tr>
-                <th>Product Name</th>
-                <th>Quantity</th>
-                <th>Total</th>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="images/buy-1.jpg" alt="">
-                        <div>
-                            <p>Red Printed T-shirt</p>
-                            <small>Price:$50.00</small> <br>
-                            <a href="">Remove</a>
-                        </div>
+    <!---------Account Page ------------->
 
-                    </div>
-                </td>
-                <td> <input type="number" value="1">
-                </td>
-                <td>$.50.00</td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="images/buy-2.jpg" alt="">
-                        <div>
-                            <p>Red Printed T-shirt</p>
-                            <small>Price:$75.00</small> <br>
-                            <a href="">Remove</a>
-                        </div>
+    <div class="account-page">
+        <div class="container">
 
-                    </div>
-                </td>
-                <td> <input type="number" value="1">
-                </td>
-                <td>$.75.00</td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="images/buy-3.jpg" alt="">
-                        <div>
-                            <p>Red Printed T-shirt</p>
-                            <small>Price:$0.00</small> <br>
-                            <a href="">Remove</a>
-                        </div>
+            <div class="row">
+                <div class="col-2">
+                    <img src="images/image1.png" alt="">
 
+
+                </div>
+                <div class="col-2">
+                    <div class="form-container">
+                        <div class="form-btn">
+                            <span onclick="login()">Login</span>
+                            <span onclick="register()">Register</span>
+                            <hr id="indicator">
+
+                        </div>
+                        <form id="loginform">
+                            <input type="text" placeholder="Username">
+                            <input type="password" placeholder="Password">
+                            <button type="submit" class="btn">submit</button>
+                            <a href="">Forgot Password</a>
+                        </form>
+                        <form id="regform">
+                            <input type="text" placeholder="Username">
+                            <input type="email" placeholder="Email">
+                            <input type="password" placeholder="Password">
+                            <button type="submit" class="btn">Register</button>
+
+                        </form>
                     </div>
-                </td>
-                <td> <input type="number" value="1">
-                </td>
-                <td>$.60.00</td>
-            </tr>
-        </table>
-        <div class="table-price">
-            <table>
-                <tr>
-                    <td>SubTotal</td>
-                    <td>$200.00</td>
-                </tr>
-                <tr>
-                    <td>Tax</td>
-                    <td>$35.00</td>
-                </tr>
-                <tr>
-                    <td>Total</td>
-                    <td>$230.00</td>
-                </tr>
-            </table>
+
+                </div>
+
+            </div>
         </div>
 
-
     </div>
-
-
 
 
 
@@ -163,6 +125,8 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/9b75ea7bc9.js " crossorigin="anonymous "></script>
+
+
     <!-- scrip for menu toggle -->
     <script>
         var menuItem = document.getElementById("menuItems ");
@@ -176,6 +140,26 @@
             }
         }
     </script>
+    <!-- scrip for login toggle -->
+    <script>
+        var loginform = document.getElementById("loginform");
+        var Regform = document.getElementById("Regform");
+        var indicator = document.getElementById("indicator");
+
+        function register() {
+            regform.style.transform = "translateX(0px)";
+            loginform.style.transform = "translateX(0px)";
+            indicator.style.transform = "translateX(100px)";
+        }
+
+        function login() {
+            regform.style.transform = "translateX(300px)";
+            loginform.style.transform = "translateX(300px)";
+            indicator.style.transform = "translateX(0px)";
+        }
+    </script>
+
+
 
 
 
