--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="images/logo.png" alt="" width="125px">
+                    <a href="index.html"><img src="images/logo.png" alt="" width="125px"></a>
 
                 </div>
                 <nav>
                     <ul id="menuItems">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="products.html">Products</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact</a></li>
-                        <li><a href="">Acccount</a></li>
+                        <li><a href="account.html">Acccount</a></li>
                     </ul>
                 </nav>
-                <img src="images/cart.png" alt="" width="30px" height="30px">
+                <a href="cart.html"><img src="images/cart.png" alt="" width="30px" height="30px"></a>
                 <img src="images/menu.png" class="menu-icon" alt="" onclick="menuToggle() ">
 
             </div>
@@ -37,7 +37,7 @@
                 <div class="col-2 ">
                     <h1>Give your workout<br> A new style!</h1>
                     <p>Success isn't always abaout greatness.It's about consistency.Consistent hard work.Consistent hard work gains success.Greatness will come</p>
-                    <a href=" " class="btn ">Explore Now &#8594;  </a>
+                    <a href="products.html" class="btn ">Explore Now &#8594;  </a>
                 </div>
                 <div class="col-2 ">
                     <img src="images/image1.png " alt=" ">
@@ -73,8 +73,9 @@
         <div class="row ">
 
             <div class="col-4 ">
-                <img src="images/product-1.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <a href="product-detail.html"><img src="images/product-1.jpg " alt=" ">
+                    <h4>Red Printed T-shirt</h4>
+                </a>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -82,11 +83,11 @@
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star-half-alt "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$50.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-2.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>HRX Sports Shoes</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -94,11 +95,11 @@
                     <i class="fas fa-star "></i>
                     <i class="far fa-star "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$75.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-3.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>HRX Gray Trackpant</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -106,11 +107,11 @@
                     <i class="fas fa-star "></i>
                     <i class="far fa-star "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$45.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-4.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>Blue Printed T-shirt</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -118,7 +119,7 @@
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star-half-alt "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$55.00</p>
             </div>
         </div>
         <h2 class="title ">Exclusive Products</h2>
@@ -126,7 +127,7 @@
 
             <div class="col-4 ">
                 <img src="images/product-5.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>Puma Gray Sports Shoes</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -134,11 +135,11 @@
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star-half-alt "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$95.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-6.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>Black Printed T-shirt</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -146,11 +147,11 @@
                     <i class="fas fa-star "></i>
                     <i class="far fa-star "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$55.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-7.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>HRXSet od 2 Socks</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -158,11 +159,11 @@
                     <i class="fas fa-star "></i>
                     <i class="far fa-star "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$30.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-8.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>Black Fossil Watch</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -170,14 +171,14 @@
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star-half-alt "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$130.00</p>
             </div>
         </div>
         <div class="row ">
 
             <div class="col-4 ">
                 <img src="images/product-9.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>Black Sportx Watch</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -185,11 +186,11 @@
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star-half-alt "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$110.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-10.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>Black HRX Shoes</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -201,7 +202,7 @@
             </div>
             <div class="col-4 ">
                 <img src="images/product-11.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>Gray Nike Shoes</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -209,11 +210,11 @@
                     <i class="fas fa-star "></i>
                     <i class="far fa-star "></i>
                 </div>
-                <p>$.50.00</p>
+                <p>$70.00</p>
             </div>
             <div class="col-4 ">
                 <img src="images/product-12.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
+                <h4>HRX Gray Trackpant</h4>
                 <div class="rating ">
                     <i class="fas fa-star "></i>
                     <i class="fas fa-star "></i>
@@ -237,7 +238,7 @@
                     <h1>Smart Bnad</h1>
                     <p></p>
                     <small>The Mi Smart Bnad 4 features a 39.9% larger (than Mi Bnad 3)AMOLED color full-touch display with adjustable brighness,so everythingis clear as can be. </small>
-                    <a href=" " class="btn ">Buy Now &#8594;  </a>
+                    <a href="cart.html " class="btn ">Buy Now &#8594;  </a>
                 </div>
             </div>
 
@@ -368,7 +369,7 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/9b75ea7bc9.js " crossorigin="anonymous "></script>
-
+    <!-- scrip for menu toggle -->
     <script>
         var menuItem = document.getElementById("menuItems");
         menuItems.style.maxHeight = "0px";
