--- a/product-detail.html
+++ b/product-detail.html
@@ -17,54 +17,52 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" alt="" width="125px">
+                <a href="index.html"> <img src="images/logo.png" alt="" width="125px"></a>
 
             </div>
             <nav>
                 <ul id="menuItems">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
-                    <li><a href="">Acccount</a></li>
+                    <li><a href="account.html">Acccount</a></li>
                 </ul>
             </nav>
-            <img src="images/cart.png" alt="" width="30px" height="30px">
+            <a href="cart.html"><img src="images/cart.png" alt="" width="30px" height="30px"></a>
             <img src="images/menu.png" class="menu-icon" alt="" onclick="menuToggle() ">
 
         </div>
 
-    </div>
 
 
 
 
-
-    <!---------------- Feature Product ----------->
-    <div class="small-container single-product">
-        <div class="row row-2">
-            <div class="col-2">
-                <img src="images/gallery-1.jpg" id="productImg">
-                <div class="small-img-row">
-                    <div class="small-img-col">
-                        <img src="images/gallery-1.jpg" class="small-Img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gallery-2.jpg " class="small-Img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gallery-3.jpg" class="small-Img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gallery-4.jpg" class="small-Img">
+        <!---------------- Feature Product ----------->
+        <div class="small-container single-product">
+            <div class="row row-2">
+                <div class="col-2">
+                    <img src="images/gallery-1.jpg" id="productImg">
+                    <div class="small-img-row">
+                        <div class="small-img-col">
+                            <img src="images/gallery-1.jpg" class="small-Img">
+                        </div>
+                        <div class="small-img-col">
+                            <img src="images/gallery-2.jpg " class="small-Img">
+                        </div>
+                        <div class="small-img-col">
+                            <img src="images/gallery-3.jpg" class="small-Img">
+                        </div>
+                        <div class="small-img-col">
+                            <img src="images/gallery-4.jpg" class="small-Img">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-2">
-                <p>Home / T-Shirt</p>
-                <h1>Red Printed T-Shirt by HRX</h1>
-                <h4>$.50.00</h4>
-                <select>
+                <div class="col-2">
+                    <p>Home / T-Shirt</p>
+                    <h1>Red Printed T-Shirt by HRX</h1>
+                    <h4>$.50.00</h4>
+                    <select>
                     <option >Select Size</option>
                     <option >XXL</option>
                     <option >XL</option>
@@ -74,159 +72,159 @@
                     <option >Small</option>
 
                </select>
-                <input type="number" value="1">
-                <a href=" " class="btn ">Add to Cart  </a>
-                <h3>Product Details</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut alias iure at eligendi enim placeat numquam labore quis repellat molestias quasi laborum, eaque, sunt est nulla, tempora iste perferendis natus.</p>
+                    <input type="number" value="1">
+                    <a href="cart.html" class="btn ">Add to Cart  </a>
+                    <h3>Product Details</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut alias iure at eligendi enim placeat numquam labore quis repellat molestias quasi laborum, eaque, sunt est nulla, tempora iste perferendis natus.</p>
 
-            </div>
-
-        </div>
-        <div class="small-container">
-            <div class="row row-2">
-                <h2>Related Products</h2>
-                <p>View More</p>
-
-            </div>
-        </div>
-        <div class="row ">
-
-
-            <div class="col-4 ">
-                <img src="images/product-1.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
-                <div class="rating ">
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star-half-alt "></i>
                 </div>
-                <p>$.50.00</p>
+
             </div>
-            <div class="col-4 ">
-                <img src="images/product-2.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
-                <div class="rating ">
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="far fa-star "></i>
+            <div class="small-container">
+                <div class="row row-2">
+                    <h2>Related Products</h2>
+                    <p>View More</p>
+
                 </div>
-                <p>$.50.00</p>
             </div>
-            <div class="col-4 ">
-                <img src="images/product-3.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
-                <div class="rating ">
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="far fa-star "></i>
-                </div>
-                <p>$.50.00</p>
-            </div>
-            <div class="col-4 ">
-                <img src="images/product-4.jpg " alt=" ">
-                <h4>Red Printed T-shirt</h4>
-                <div class="rating ">
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star-half-alt "></i>
-                </div>
-                <p>$.50.00</p>
-            </div>
-        </div>
-
-
-
-
-
-
-    </div>
-
-
-    <!--------- Footer ------------>
-    <div class="footer ">
-        <div class="container ">
             <div class="row ">
-                <div class="footer-col-1 ">
-                    <h3>Download Our App</h3>
-                    <p>Download App for Android and ios mobile phone.</p>
-                    <div class="logo-div ">
-                        <img src="images/play-store.png " alt=" ">
-                        <img src="images/app-store.png " alt=" ">
 
+                <div class="col-4 ">
+                    <a href="product-detail.html"><img src="images/product-1.jpg " alt=" ">
+                        <h4>Red Printed T-shirt</h4>
+                    </a>
+                    <div class="rating ">
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star-half-alt "></i>
                     </div>
+                    <p>$50.00</p>
                 </div>
-                <div class="footer-col-2 ">
-                    <img src="images/logo-white.png " alt=" ">
-
-                    <p>Our Purpose is to Sustaiably make the pleasure and Benefits of sports Accessible to the Many</p>
+                <div class="col-4 ">
+                    <img src="images/product-2.jpg " alt=" ">
+                    <h4>HRX Sports Shoes</h4>
+                    <div class="rating ">
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="far fa-star "></i>
+                    </div>
+                    <p>$75.00</p>
                 </div>
-                <div class="footer-col-3 ">
-                    <h3>Useful Links</h3>
-                    <ul>
-                        <li>Coupons</li>
-                        <li>Blog Post</li>
-                        <li>Return Policy</li>
-                        <li>Join Affilates</li>
-                    </ul>
+                <div class="col-4 ">
+                    <img src="images/product-3.jpg " alt=" ">
+                    <h4>HRX Gray Trackpant</h4>
+                    <div class="rating ">
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="far fa-star "></i>
+                    </div>
+                    <p>$45.00</p>
                 </div>
-                <div class="footer-col-3 ">
-                    <h3>Social Media Links</h3>
-                    <ul>
-                        <li>Facebook</li>
-                        <li>Twitter</li>
-                        <li>Instagram</li>
-                        <li>Youtube</li>
-                    </ul>
+                <div class="col-4 ">
+                    <img src="images/product-4.jpg " alt=" ">
+                    <h4>Blue Printed T-shirt</h4>
+                    <div class="rating ">
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star "></i>
+                        <i class="fas fa-star-half-alt "></i>
+                    </div>
+                    <p>$55.00</p>
                 </div>
-
             </div>
-            <hr>
 
-            <p class="copy-right-text ">
-                Copyright &copy; 2021
-            </p>
+
+
+
+
+
         </div>
-    </div>
-    <script src="https://kit.fontawesome.com/9b75ea7bc9.js " crossorigin="anonymous "></script>
 
-    <script>
-        var menuItem = document.getElementById("menuItems ");
-        menuItems.style.maxHeight = "0px ";
 
-        function menuToggle() {
-            if (menuItems.style.maxHeight == "0px ") {
-                menuItems.style.maxHeight = "200px ";
-            } else {
-                menuItems.style.maxHeight = "0px ";
+        <!--------- Footer ------------>
+        <div class="footer ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="footer-col-1 ">
+                        <h3>Download Our App</h3>
+                        <p>Download App for Android and ios mobile phone.</p>
+                        <div class="logo-div ">
+                            <img src="images/play-store.png " alt=" ">
+                            <img src="images/app-store.png " alt=" ">
+
+                        </div>
+                    </div>
+                    <div class="footer-col-2 ">
+                        <img src="images/logo-white.png " alt=" ">
+
+                        <p>Our Purpose is to Sustaiably make the pleasure and Benefits of sports Accessible to the Many</p>
+                    </div>
+                    <div class="footer-col-3 ">
+                        <h3>Useful Links</h3>
+                        <ul>
+                            <li>Coupons</li>
+                            <li>Blog Post</li>
+                            <li>Return Policy</li>
+                            <li>Join Affilates</li>
+                        </ul>
+                    </div>
+                    <div class="footer-col-3 ">
+                        <h3>Social Media Links</h3>
+                        <ul>
+                            <li>Facebook</li>
+                            <li>Twitter</li>
+                            <li>Instagram</li>
+                            <li>Youtube</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <hr>
+
+                <p class="copy-right-text ">
+                    Copyright &copy; 2021
+                </p>
+            </div>
+        </div>
+        <script src="https://kit.fontawesome.com/9b75ea7bc9.js " crossorigin="anonymous "></script>
+        <!-- scrip for menu toggle -->
+        <script>
+            var menuItem = document.getElementById("menuItems ");
+            menuItems.style.maxHeight = "0px ";
+
+            function menuToggle() {
+                if (menuItems.style.maxHeight == "0px ") {
+                    menuItems.style.maxHeight = "200px ";
+                } else {
+                    menuItems.style.maxHeight = "0px ";
+                }
             }
-        }
-    </script>
+        </script>
 
-    <!-- Product Script -->
-    <script>
-        var productImg = document.getElementById("productImg");
-        var smallImg = document.getElementsByClassName("small-Img");
-        smallImg[0].onclick = function() {
-            productImg.src = smallImg[0].src;
-        }
-        smallImg[1].onclick = function() {
-            productImg.src = smallImg[1].src;
-        }
-        smallImg[2].onclick = function() {
-            productImg.src = smallImg[2].src;
-        }
-        smallImg[3].onclick = function() {
-            productImg.src = smallImg[3].src;
-        }
-    </script>
+        <!-- Product gallery  Script -->
+        <script>
+            var productImg = document.getElementById("productImg");
+            var smallImg = document.getElementsByClassName("small-Img");
+            smallImg[0].onclick = function() {
+                productImg.src = smallImg[0].src;
+            }
+            smallImg[1].onclick = function() {
+                productImg.src = smallImg[1].src;
+            }
+            smallImg[2].onclick = function() {
+                productImg.src = smallImg[2].src;
+            }
+            smallImg[3].onclick = function() {
+                productImg.src = smallImg[3].src;
+            }
+        </script>
 
 
 </body>
