added links on about and contact tabs

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <ul id="menuItems">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="account.html">Contact</a></li>
                         <li><a href="account.html">Acccount</a></li>
                     </ul>
                 </nav>
