--- a/product-detail.html
+++ b/product-detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Products | RedStore </title>
+    <title>Product Detail | RedStore </title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,8 +22,8 @@
                 <ul id="menuItems">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="account.html">Contact</a></li>
                     <li><a href="account.html">Acccount</a></li>
                 </ul>
             </nav>
